Fixed hr spacing in friend notification

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -80,6 +80,7 @@ $movie-poster-height: 50vh;
     border: 0; 
     border-top: 1px solid #302f2f; 
     padding: 0;
+    margin: 10px;
 }
 
 /* Edit Profile */
